samples/_failures_safe/1761643144_5f1bd8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_719aaebe.c: In function ‘main’:
./samples/SAFE/__tmp_719aaebe.c:134:5: error: expected declaration or statement at end of input
  134 |     }
      |     ^
